[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemies/Flying/Fliyng.gd" type="Script" id=1]
[ext_resource path="res://enemies/Flying/flying1.png" type="Texture" id=2]
[ext_resource path="res://enemies/Flying/flying2.png" type="Texture" id=3]
[ext_resource path="res://enemies/Flying/flying3.png" type="Texture" id=4]
[ext_resource path="res://enemies/Flying/flying4.png" type="Texture" id=5]
[ext_resource path="res://enemies/Flying/flying5.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 20.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "die",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 6.28193

[sub_resource type="CircleShape2D" id=3]
radius = 52.0226

[node name="Fliyng" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.125, 0 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.15625, 4.40625 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.010727, 23.2828 )
shape = SubResource( 3 )
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
